--- a/templates/todo.html.jinja
+++ b/templates/todo.html.jinja
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f9f9f9;
+            background-color: #ffcccb; 
             color: #333;
             margin: 20px;
             text-align: center;
         }
 
         h1 {
-            color: #428bca;
+            color: #ff69b4; 
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
@@ -23,7 +22,7 @@
         }
 
         li {
-            background-color: #ffffff;
+            background-color: #fff0f5; 
             margin: 10px 0;
             padding: 15px;
             border-radius: 8px;
@@ -49,7 +48,7 @@
         }
 
         input[type='submit'] {
-            background-color: #5bc0de;
+            background-color: #ff1493; 
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -58,7 +57,7 @@
         }
 
         input[type='submit']:hover {
-            background-color: #428bca;
+            background-color: #ff007f; 
         }
     </style>
 </head>
@@ -82,4 +81,3 @@
 </body>
 
 </html>
-
