--- a/templates/todo.html.jinja
+++ b/templates/todo.html.jinja
@@ -76,8 +76,7 @@
     </style>
 </head> 
 
-<body>
-    <h1>Hello, This is my todolist</h1>
+<body>Welcome To Kahlil Todo List 🌸 </h1>
     <ul>
         {% for todo in todos %}
             <li class="{% if todo['completions']%}completed{% endif %}">
