--- a/templates/todo.html.jinja
+++ b/templates/todo.html.jinja
@@ -76,7 +76,8 @@
     </style>
 </head> 
 
-<body>Welcome To Kahlil Todo List 🌸 </h1>
+<body>
+<h1>Welcome To Kahlil Todo List 🌸🌸 </h1>
     <ul>
         {% for todo in todos %}
             <li class="{% if todo['completions']%}completed{% endif %}">
