--- a/templates/todo.html.jinja
+++ b/templates/todo.html.jinja
@@ -72,7 +72,18 @@
 
         input[type='submit']:hover {
             background-color: #ff007f; 
-        }
+        } 
+
+        input[name='new_todo'] {
+    padding: 10px;
+    border: 1px solid #ff007f; 
+    border-radius: 4px;
+    width: 200px;
+    margin-right: 10px;
+    background-color: #ffc0cb; 
+    color: #333; 
+}
+
     </style>
 </head> 
 
