--- a/templates/todo.html.jinja
+++ b/templates/todo.html.jinja
@@ -36,7 +36,7 @@
         }
 
         li {
-            background-color: #fff0f5; 
+            background-color: #ea6692; 
             margin: 10px 0;
             padding: 15px;
             border-radius: 8px;
